# bodas

./: .gitignore  LICENSE.txt  README.md  TODO.md  basic.ipynb  environment.yml  example0.py  example1.py  pyproject.toml  requirements.txt  setup.py
bodas/: __init__.py  main.py
examples/: basic.html  basic.ipynb  example0.py  example1.py  example2.py
tests/: test_bodas.py
